xmonad.errors

xmonad.hs:297:11: error:
    • Couldn't match expected type ‘DefaultShrinker -> Theme -> l a’
                  with actual type ‘ModifiedLayout
                                      (Decoration TabbedDecoration DefaultShrinker) Simplest Window’
    • The function ‘simpleTabbed’ is applied to two arguments,
      but its type ‘ModifiedLayout
                      (Decoration TabbedDecoration DefaultShrinker) Simplest Window’
      has none
      In the second argument of ‘($)’, namely
        ‘simpleTabbed shrinkText myTabTheme’
      In the second argument of ‘($)’, namely
        ‘addOverline $ simpleTabbed shrinkText myTabTheme’
    • Relevant bindings include
        tabs :: ModifiedLayout
                  Rename
                  (ModifiedLayout
                     AvoidStruts
                     (ModifiedLayout (Decoration NoFrillsDecoration DefaultShrinker) l))
                  a
          (bound at xmonad.hs:294:5)
    |
297 |         $ simpleTabbed shrinkText myTabTheme
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
